--- a/webhook-deployment.yaml
+++ b/webhook-deployment.yaml
@@ -25,7 +25,7 @@ spec:
       containers:
       - name: webhook-server
         image: ghcr.io/ba0f3/tailscale-webhook:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 8443
           name: webhook
